app/actual/actual-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-service
spec:
  selector:
    app: actual
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5006
