app/actual/actual-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-ingress
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - actual.yourdomain
    secretName: actual-tls
  rules:
  - host: actual.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual-service
            port:
              number: 80
